objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>AS_HostingAddr2__c</fullName>
        <label>HostingAddr2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HostingCity__c</fullName>
        <label>HostingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Pay_at_the_Door_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Pay at the Door Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Pay_by_Check_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Pay by Check Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Send_an_Invoice_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Send an Invoice Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Tags__c</fullName>
        <label>Attendee_Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_Types__c</fullName>
        <defaultValue>&quot;Volunteer ; Small scale business; Corporate; MBE&quot;</defaultValue>
        <description>type of an attendee .</description>
        <label>Attendee Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_can_send_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee can send request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Name__c</fullName>
        <label>Badge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoothLeads_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>BoothLeads Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BreakTime_Between_Appointments__c</fullName>
        <label>BreakTime Between Appointments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRDetails_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCRDetails Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_ContactURL__c</fullName>
        <description>Contact URL  gathers the contact information placing in the attendee registration, some thing like 
http://www.deloitte.com/view/en_IN/in/contact-us/index.htm</description>
        <inlineHelpText>Contact URL  gathers the contact information placing in the attendee registration
http://www.deloitte.com/view/en_IN/in/contact-us/index.htm</inlineHelpText>
        <label>Contact URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_CustomReg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomReg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EV_EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_EndTime__c</fullName>
        <label>EndTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:05 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:25 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:35 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:55 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:05 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:25 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:35 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:55 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:05 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:25 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_EventLogo__c</fullName>
        <label>EventLogo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_HistingAddr1__c</fullName>
        <label>HistingAddr1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostedByEventBrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HostedByEventBrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_HostingCountryNew__c</fullName>
        <label>HostingCountryNew</label>
        <picklist>
            <picklistValues>
                <fullName>United States of America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uzbekistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sverige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_HostingCountry__c</fullName>
        <label>HostingCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingFax__c</fullName>
        <label>HostingFax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EV_HostingLocation__c</fullName>
        <label>HostingLocation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_HostingOrgName__c</fullName>
        <label>HostingOrgName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingPhone__c</fullName>
        <label>HostingPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EV_HostingPostalCode__c</fullName>
        <label>HostingPostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingStateNew__c</fullName>
        <label>HostingStateNew</label>
        <picklist>
            <controllingField>EV_HostingCountryNew__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_HostingState__c</fullName>
        <label>HostingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingTimeZone__c</fullName>
        <label>HostingTimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Standard Time(IST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central European Time Zone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_HostingZipcode__c</fullName>
        <label>HostingZipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_IncludedFields__c</fullName>
        <defaultValue>&apos;AS_FirstName__c,AS_Company__c,AS_Prefix__c,AS_Suffix__c,AS_Title__c,AS_CellPhone__c,AS_Age__c,AS_Gender__c,AS_BirthDate__c,AS_HomeAddress1__c,AS_ShippingAddress1__c,AS_WorkAddress1__c,AS_NAICSCode1__c,AS_NAICSCode2__c,AS_NAICSCode3__c,AS_NAICSCode4__c,AS_NAICSCode5__c,AS_PrimaryBusinessCategory__c,AS_SecondaryBusinessCategory__c,AS_NumberOfEmployees__c,AS_BusinessEstablishedDate__c,AS_BusinessRevenue__c,AS_BusinessTaxId__c,AS_BusinessDunsNumber__c,AS_WebsiteUrl__c,AS_BlogUrl__c,AS_DiversityType__c,AS_BusinessDescription__c,AttendeePic&apos;</defaultValue>
        <label>IncludedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_QuickReg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuickReg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_RedirectURI__c</fullName>
        <description>This is for  redirecting Attendee after finishing registration process(Both Details and payment ), and  Event admin need to  decide the location where to navigate the user</description>
        <inlineHelpText>This is for  redirecting Attendee after finishing registration process(Both Details and payment ), and  Event admin need to  decide the location where to navigate the user</inlineHelpText>
        <label>Redirect URI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_SiteLocation__c</fullName>
        <description>the site location is the URL, indicates the event  registration available to the attendees, this should be something like https://http://boothleads.bleadtest.cs5.force.com/BioDiversity</description>
        <inlineHelpText>the site location is the URL, indicates the event  registration available to the attendees, this should be something like https://http://boothleads.bleadtest.cs5.force.com/BioDiversity</inlineHelpText>
        <label>SiteLocation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Title__c</fullName>
        <description>Changed By Phani on 09/07/2012</description>
        <label>Title</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_WebsiteURL__c</fullName>
        <defaultValue>&apos;www.boothleads.com&apos;</defaultValue>
        <label>WebsiteURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email_Notifications_flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Notifications flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Scan_To_ATT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Scan To ATT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Scan_To_BA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Scan To BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ev_RequiredFields__c</fullName>
        <defaultValue>&apos;AS_FirstName__c,AS_Company__c,AS_CellPhone__c&apos;</defaultValue>
        <label>RequiredFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventDiversityValues__c</fullName>
        <defaultValue>&quot;MINORITY OWNED BUSINESS ENTERPRISE;WOMAN OWNED BUSINESS ENTERPRISE;SBA 8(A) PROGRAM;SMALL DISADVANTAGED BUSINESS;HISTORICALLY UNDERUTILIZED BUSINESS ;SERVICE DISABLED VETERAN OWNED BUSINESS ENTERPRISE ;VETERAN OWNED BUSINESS ENTERPRISE ;SMALL BUSINESS ENTERPRISE ;DISADVANTAGED BUSINESS ENTERPRISE ;GAY, LESBIAN, BISEXUAL, TRANSGENDER;8A;AS 9100;DBE;DOT;DVBE;EDWOSB;Hub Zone;ISO 14001;ISO 26000;ISO 27000;ISO 9001;LEED;NGLCC;NMSDC;NWBOC;OSHA 18001;ROHS;SDB;SDVOB;TL 9000;TS 16949;Veterans;WE Connect International;WOSB;Other&quot;</defaultValue>
        <label>EventDiversityValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_PostalCode__c</fullName>
        <label>Event PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Printer__c</fullName>
        <defaultValue>&apos;Avery 5392 Name badges&apos;</defaultValue>
        <label>Event Printer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Event</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_ZipCode__c</fullName>
        <label>Event_ZipCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventdex_Id__c</fullName>
        <label>Eventdex Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exhibitor_can_send_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exhibitor can send request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FacebookId__c</fullName>
        <label>FacebookId</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Include the fee in the ticket price</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Charge the fee to the customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floor_Map_Image__c</fullName>
        <label>Floor Map Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRegistration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_For_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is For Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Live_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Live Event?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MatchMaking_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MatchMaking Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Webank_event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Webank event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line_Color__c</fullName>
        <defaultValue>&apos;Black&apos;</defaultValue>
        <label>Lable First Line Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line_Font__c</fullName>
        <defaultValue>&apos;Times New Roman&apos;</defaultValue>
        <label>Lable First Line Font</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line_Size__c</fullName>
        <defaultValue>&apos;28pt&apos;</defaultValue>
        <label>Lable First Line Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line__c</fullName>
        <defaultValue>&apos;AS_FirstName__c&apos;</defaultValue>
        <label>Lable First Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line_Color__c</fullName>
        <defaultValue>&apos;Black&apos;</defaultValue>
        <label>Lable Secoend Line Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line_Font__c</fullName>
        <defaultValue>&apos;Times New Roman&apos;</defaultValue>
        <label>Lable Secoend Line Font</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line_Size__c</fullName>
        <defaultValue>&apos;24pt&apos;</defaultValue>
        <label>Lable Secoend Line Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line__c</fullName>
        <defaultValue>&apos;AS_LastName__c&apos;</defaultValue>
        <label>Lable Secoend Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line_Color__c</fullName>
        <defaultValue>&apos;Black&apos;</defaultValue>
        <label>Lable Third Line Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line_Font__c</fullName>
        <defaultValue>&apos;Times New Roman&apos;</defaultValue>
        <label>Lable Third Line Font</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line_Size__c</fullName>
        <defaultValue>&apos;18pt&apos;</defaultValue>
        <label>Lable Third Line Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line__c</fullName>
        <defaultValue>&apos;AS_Company__c&apos;</defaultValue>
        <label>Lable Third Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MM_End_Date__c</fullName>
        <label>MM End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM_End_Time__c</fullName>
        <label>MM End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MM_Firstaday_EndTime__c</fullName>
        <label>MM Firstaday EndTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MM_Firstaday_startTime__c</fullName>
        <label>MM Firstaday startTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MM_Secondaday_EndTime__c</fullName>
        <label>MM Secondaday EndTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>